@@ -1,5 +1,11 @@
 2007-03-13  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/accerciser.py:
+	* src/lib/accerciser/plugin_manager.py: Added accelerators for
+	quick plugin tab switching (bug 417424).
+
+2007-03-13  Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/interface_view.glade: Added mnemonics to expanders 
 	(bug 417421).
 
